# live-bootcamp-project

./: compose.yml
auth-service/: Cargo.toml
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: datastores.rs  email.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_user_store.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
