[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
serde_json = "1.0.149"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.13.1", default-features = false, features = ["json"] }
